--- a/nlp_with_spark.ipynb
+++ b/nlp_with_spark.ipynb
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "# rename columns\n",
-    "no_blanks_df.withColumnRenamed(no_blanks_df[\"lemm_text\"], \"text\")"
+    "no_blanks_df.withColumnRenamed(\"lemm_text\", \"text\")"
    ]
   },
   {
